--- a/src/app/pages/institutes/components/Cards.scss
+++ b/src/app/pages/institutes/components/Cards.scss
@@ -1,6 +1,17 @@
 @import '../../../../assets/shared/Color';
 
+.institutes-box {
+  overflow-y: scroll;
+  height: 100vh;
+  width: 21vw;
+}
+
 .card-link {
+
+  +.card-link {
+    margin-left: 0;
+  }
+
   color: $tertiary-color;
 
   &:hover {
@@ -22,7 +33,7 @@
 
 .card-institutes {
   width: 20vw;
-  position: absolute;
+  margin-top: 1em;
   z-index: 100;
   border-radius: 0;
 }
