removes buttons that are being displayed and has no actions implemented yet

--- a/src/app/pages/institutes/components/cards/Cards.scss
+++ b/src/app/pages/institutes/components/cards/Cards.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/shared/Color';
+@import '../../../../../assets/shared/Color';
 
 .institutes-box {
   overflow-y: scroll;
