--- a/src/app/pages/institutes/components/search_box/searchBox.scss
+++ b/src/app/pages/institutes/components/search_box/searchBox.scss
@@ -1,8 +1,7 @@
-@import '../../../../assets/shared/Color';
+@import '../../../../../assets/shared/Color';
 
 .container-items {
   width: 20vw;
-  height: 100vh;
   position: fixed;
   z-index: 100;
   margin: 8em 2.675em;
