modify image of login screen and navbar

--- a/src/app/components/navbar/Navbar.scss
+++ b/src/app/components/navbar/Navbar.scss
@@ -18,6 +18,10 @@
   height: 5em;
 }
 
+#searchButton {
+  cursor: pointer;
+}
+
 .btn-search {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
