--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -5,7 +5,7 @@ html, body, #root {
   min-height: 100%;
 }
 
-body {
+html, body {
   background: linear-gradient(110deg, $primary-color 40%, $secondary-color 80%);
   -webkit-font-smoothing: antialiased !important;
 }
